# ValidPDFGenerator

./: .gitignore  README.md  main_generate_pdf.py  main_to_base64.py  pyproject.toml
lib/: base64_service.py  image_service.py  lorem_ipsum.py  pdf_service.py
